--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
         "axios": "^1.7.9",
     "cors": "^2.8.5",
+    "mongoose": "^5.13.5",
     "express": "^4.21.2",
     "express-rate-limit": "^7.5.0",
     "helmet": "^8.0.0",
