--- a/package.json
+++ b/package.json
@@ -10,15 +10,18 @@
   "author": "AwanBrayy",
   "license": "MIT",
   "dependencies": {
-        "axios": "^1.7.9",
+   "axios": "^1.7.9",
     "cors": "^2.8.5",
+    "bcrypt": "^5.1.1",
     "mongoose": "^5.13.5",
     "express": "^4.21.2",
     "express-rate-limit": "^7.5.0",
     "helmet": "^8.0.0",
     "ip-cidr": "^4.0.2",
     "joi": "^17.13.3",
+      "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.5.0",
+    "nodemailer": "^6.10.0",
     "node-telegram-bot-api": "^0.66.0",
     "node-upload-images": "^1.0.1",
     "request-ip": "^3.3.0",
