--- a/vercel.json
+++ b/vercel.json
@@ -2,11 +2,13 @@
   "version": 2,
   "builds": [
     { "src": "server.js", "use": "@vercel/node" },
-    { "src": "*.html", "use": "@vercel/static" }
+    { "src": "*.html", "use": "@vercel/static" },
+    { "src": "*.json", "use": "@vercel/static" }
   ],
   "routes": [
     { "src": "/api/(.*)", "dest": "server.js" },
     { "src": "/admin", "dest": "/admin.html" },
+        { "src": "/(.*)\\.json", "dest": "/$1.json" },
     { "src": "/(.*)", "dest": "/index.html" }
   ]
 }
