--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
    "axios": "^1.7.9",
     "cors": "^2.8.5",
+     "crypto": "^1.0.1",
     "bcrypt": "^5.1.1",
     "mongoose": "^5.13.5",
     "express": "^4.21.2",
