--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
       "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.5.0",
     "nodemailer": "^6.10.0",
+      "swagger-jsdoc": "^6.2.8",
+        "swagger-ui-express": "^5.0.1",
     "node-telegram-bot-api": "^0.66.0",
     "node-upload-images": "^1.0.1",
     "request-ip": "^3.3.0",
