--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "cors": "^2.8.5",
      "crypto": "^1.0.1",
     "bcrypt": "^5.1.1",
+    "dotenv": "^16.4.7",
     "mongoose": "^5.13.5",
     "express": "^4.21.2",
     "express-rate-limit": "^7.5.0",
