--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "joi": "^17.13.3",
       "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.5.0",
+      "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.10.0",
       "swagger-jsdoc": "^6.2.8",
         "swagger-ui-express": "^5.0.1",
